Add endpoint to query settings
